--- a/templates/base.html
+++ b/templates/base.html
@@ -1,1 +1,226 @@
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="../static/images/favicon.ico" type="image/x-icon">
 
+    <title>Dining on Campus at NYU {% block title %} {% endblock %}</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="../static/css/bootstrap.min.css" rel="stylesheet">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous"> -->
+
+    <style>
+      .bd-placeholder-img {
+        font-size: 1.125rem;
+        text-anchor: middle;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        user-select: none;
+      }
+
+      @media (min-width: 768px) {
+        .bd-placeholder-img-lg {
+          font-size: 3.5rem;
+        }
+      }
+
+      .b-example-divider {
+        height: 3rem;
+        background-color: rgba(0, 0, 0, .1);
+        border: solid rgba(0, 0, 0, .15);
+        border-width: 1px 0;
+        box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
+      }
+
+      .b-example-vr {
+        flex-shrink: 0;
+        width: 1.5rem;
+        height: 100vh;
+      }
+
+      .bi {
+        vertical-align: -.125em;
+        fill: currentColor;
+      }
+
+      .nav-scroller {
+        position: relative;
+        z-index: 2;
+        height: 2.75rem;
+        overflow-y: hidden;
+      }
+
+      .nav-scroller .nav {
+        display: flex;
+        flex-wrap: nowrap;
+        padding-bottom: 1rem;
+        margin-top: -1px;
+        overflow-x: auto;
+        text-align: center;
+        white-space: nowrap;
+        -webkit-overflow-scrolling: touch;
+      }
+    </style>
+
+    <!-- Custom styles for this template -->
+    <link href="../static/css/blog.css" rel="stylesheet">
+
+    <!-- Fonts and Icons -->
+    <!-- None at this time -->
+
+  </head>
+
+
+  <body>
+
+
+    <div class="container">
+      <header class="blog-header lh-1 py-3">
+        <div class="row flex-nowrap justify-content-between align-items-center">
+          <div class="col-4 pt-1">
+            <a class="link-secondary" href="#">Subscribe</a>
+          </div>
+          <div class="col-4 text-center">
+            <a class="blog-header-logo" href="#">
+              <img src="../static/images/logo.jpeg" alt="NYU Eats" width="30%" height="auto">
+            </a>
+          </div>
+
+          <div class="col-4 d-flex justify-content-end align-items-center">
+            <a class="link-secondary" href="#" aria-label="Search">
+              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="mx-3" role="img" viewBox="0 0 24 24"><title>Search</title><circle cx="10.5" cy="10.5" r="7.5"/><path d="M21 21l-5.2-5.2"/></svg>
+            </a>
+            <a class="btn btn-sm btn-outline-secondary" href="#">Sign up</a>
+          </div>
+        </div>
+      </header>
+
+      <div class='container'>
+        <nav class="navbar navbar-expand-lg" style="background-color: #5b2e88;">
+          <div class="container-fluid">
+            <!-- <a class="navbar-brand" href="#">NYU Eats Home</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button> -->
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <!-- Locations & Menus -->
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Locations & Menus
+                  </a>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="#">What's on the Menu?</a></li>
+                    <li><a class="dropdown-item" href="#">Hours of Operation</a></li>
+                    <li><a class="dropdown-item" href="#">Campus Map</a></li>
+                    <li><a class="dropdown-item" href="#">Grubhub Mobile Ordering</a></li>
+                  </ul>
+                </li>
+                <!-- Events & Special Offers -->
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Events & Special Offers
+                  </a>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="#">Events</a></li>
+                    <li><a class="dropdown-item" href="#">$3 & $5 Deals</a></li>
+                    <li><a class="dropdown-item" href="#">Special Offers</a></li>
+                  </ul>
+                </li>
+                <!-- Meal Plans -->
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Meal Plans
+                  </a>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="#">Dining Guide 2022-2023</a></li>
+                    <li><a class="dropdown-item" href="#">Fall 2022 Sneak Preview</a></li>
+                    <li><a class="dropdown-item" href="#">Purchase Meal Plan Here</a></li>
+                    <li><a class="dropdown-item" href="#">Meal Plans 2022-2023</a></li>
+                    <li><a class="dropdown-item" href="#">How to Use Your Meal Plan</a></li>
+                    <li><a class="dropdown-item" href="#">FAQ</a></li>
+                  </ul>
+                </li>
+                <!-- Wellness & Sustainability -->
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Wellness & Sustainability
+                  </a>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="#">Sustainability</a></li>
+                    <li><a class="dropdown-item" href="#">Ozzi Initiative</a></li>
+                    <li><a class="dropdown-item" href="/sas_about">Share A Swipe!</a></li>
+                    <li><a class="dropdown-item" href="#">Cool Food Pledge & Green Restaurant Association</a></li>
+                    <li><a class="dropdown-item" href="#">Allergen Guide</a></li>
+                    <li><a class="dropdown-item" href="#">Special Diets & Allergies</a></li>
+                    <li><a class="dropdown-item" href="#">Wellness Philosophy</a></li>
+                    <li><a class="dropdown-item" href="#">Wellness FAQ</a></li>
+                    <li><a class="dropdown-item" href="#">Avoiding Gluten</a></li>
+                  </ul>
+                </li>
+                <!-- Share A Swipe! -->
+                <!-- <li class="nav-item">
+                  <a class="nav-link" href="#" role="button">
+                    Share A Swipe!
+                  </a>
+                </li> -->
+                <!-- <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Share A Swipe!
+                  </a>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="#">What is Share A Swipe?</a></li>
+                    <li><a class="dropdown-item" href="#">Another action</a></li>
+                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                  </ul>
+                </li> -->
+                <!-- About Us -->
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    About Us
+                  </a>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="#">Staff</a></li>
+                    <li><a class="dropdown-item" href="#">Contact Us</a></li>
+                    <li><a class="dropdown-item" href="#">Twitter</a></li>
+                    <li><a class="dropdown-item" href="#">Instagram</a></li>
+                    <li><a class="dropdown-item" href="#">Youtube Channel</a></li>
+                    <li><a class="dropdown-item" href="#">About Chartwells</a></li>
+                  </ul>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+      </div>
+    </div>
+
+    <main class="container">
+
+      {% block content %}
+
+      <!-- ENTER EACH PAGES CONTENT-->
+
+      {% endblock %}
+
+    </main>
+
+
+    <br><br>
+    <footer class="mastfoot">
+      <div class="inner">
+        <center>
+        <p><small>Powered by <a href="https://github.com/taywong00/design-project">B24</a>.</small></p>
+      </center>
+      </div>
+    </footer>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
+  </body>
+</html>
