--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../static/images/favicon.ico" type="image/x-icon">
 
-    <title>Dining on Campus at NYU {% block title %} {% endblock %}</title>
+    <title>NYU Eats {% block title %} {% endblock %}</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
