--- a/templates/sas_about.html
+++ b/templates/sas_about.html
@@ -4,6 +4,9 @@
 || Share A Swipe!
 {% endblock %}
 
+{% block style %}
+{% endblock %}
+
 {% block content %}
 
 <div class="p-4 p-md-5 mb-4 rounded text-bg-dark">
