--- a/templates/sas_login.html
+++ b/templates/sas_login.html
@@ -4,126 +4,11 @@
 || Share A Swipe!
 {% endblock %}
 
+{% block style %}
+{% endblock %}
+
 {% block content %}
 
-<div class="p-4 p-md-5 mb-4 rounded text-bg-dark">
-  <div class="col-md-6 px-0">
-    <h1 class="display-4 fst-italic">Share A Swipe!</h1>
-    <p class="lead my-3">[Caption about the program, and we'll spend the rest of this page with program info.]</p>
-  </div>
-</div>
-
-<div class="row g-5">
-  <div class="col-md-8">
-    <h3 class="pb-4 mb-4 fst-italic border-bottom">
-      About the Program
-    </h3>
-
-    <article class="blog-post">
-      <h2 class="blog-post-title mb-1">Share A Swipe!</h2>
-      <p>
-        According to all known laws of aviation, there is no way a bee should be able to fly. Its wings are too small to get its fat little body off the ground. The bee, of course, flies anyway because bees don't care what humans think is impossible. Yellow, black. Yellow, black. Yellow, black. Yellow, black. Ooh, black and yellow! Let's shake it up a little. Barry! Breakfast is ready!
-        <br><br>
-        Coming! Hang on a second. Hello? Barry? Adam? Can you believe this is happening? I can't. I'll pick you up. Looking sharp. Use the stairs, Your father paid good money for those. Sorry. I'm excited. Here's the graduate. We're very proud of you, son. A perfect report card, all B's. Very proud. Ma! I got a thing going here. You got lint on your fuzz. Ow! That's me! Wave to us! We'll be in row 118,000. Bye! Barry, I told you, stop flying in the house! Hey, Adam. Hey, Barry. Is that fuzz gel?
-      </p>
-      <br><hr>
-    </article>
-    <article class="blog-post">
-      <h2 class="blog-post-title mb-1">How it Works</h2>
-      <p>
-        A little. Special day, graduation. Never thought I'd make it. Three days grade school, three days high school. Those were awkward. Three days college. I'm glad I took a day and hitchhiked around The Hive. You did come back different. Hi, Barry. Artie, growing a mustache? Looks good. Hear about Frankie? Yeah. You going to the funeral? No, I'm not going. Everybody knows, sting someone, you die. Don't waste it on a squirrel. Such a hothead.
-        <br><br>
-        I guess he could have just gotten out of the way.
-        I love this incorporating an amusement park into our day.
-        That's why we don't need vacations.
-        Boy, quite a bit of pomp under the circumstances.
-        Well, Adam, today we are men.
-        We are!
-        Bee-men.
-        Amen!
-      </p>
-      <br><hr>
-    </article>
-    <article class="blog-post">
-      <h2 class="blog-post-title mb-1">Eligibility</h2>
-      <p>
-        Hallelujah!
-        Students, faculty, distinguished bees,
-        please welcome Dean Buzzwell.
-        Welcome, New Hive City graduating class of 9:15.
-        That concludes our ceremonies And begins your career at Honex Industries!
-        Will we pick our job today?
-        I heard it's just orientation.
-        Heads up! Here we go.
-        Keep your hands and antennas inside the tram at all times.
-        Wonder what it'll be like?
-        A little scary.
-      </p>
-      <br><hr>
-    </article>
-    <article class="blog-post">
-      <h2 class="blog-post-title mb-1">How to Become a Member</h2>
-      <p>
-        Welcome to Honex, a division of Honesco and a part of the Hexagon Group.
-This is it!
-Wow.
-Wow.
-We know that you, as a bee, have worked your whole life to get to the point where you can work for your whole life.
-Honey begins when our valiant Pollen Jocks bring the nectar to The Hive.
-Our top-secret formula is automatically color-corrected, scent-adjusted and bubble-contoured into this soothing sweet syrup with its distinctive golden glow you know as... Honey!
-That girl was hot.
-She's my cousin!
-She is?
-Yes, we're all cousins.
-Right. You're right.
-</p>
-      <br><hr>
-    </article>
-
-
-
-
-  </div>
-
-  <div class="col-md-4">
-    <div class="position-sticky" style="top: 2rem;">
-      <div class="p-4 mb-3 bg-light rounded">
-        <h4 class="fst-italic">Sign Up or Log In</h4>
-        <p class="mb-0">
-          Register to become a member, or log in to access your Share A Swipe account details.
-        </p>
-        <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-          <a href="/sas_login" class="btn btn-primary me-md-2" role="button">Log In</a>
-        </div>
-      </div>
-
-      <div class="p-4">
-        <h4 class="fst-italic">Additional Help & Resources</h4>
-        <ol class="list-unstyled">
-          <li><a href="#">Resource 1</a></li>
-          <li><a href="#">Resource 2</a></li>
-          <li><a href="#">Resource 3</a></li>
-        </ol>
-      </div>
-
-      <div class="p-4">
-        <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-          <div class="col p-4 d-flex flex-column position-static">
-            <strong class="d-inline-block mb-2 text-success">More Info</strong>
-            <h3 class="mb-0">Check out our whitepapers</h3>
-            <div class="mb-1 text-muted">
-            Meet the team and learn more about how our solution aims to solve food indescurity at NYU. </div>
-
-            <a href="#" class="stretched-link">Go to whitepapers. ></a>
-          </div>
-          <div class="col-auto d-none d-lg-block">
-
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
 
 
 {% endblock %}
