front end updates

--- a/templates/sas_home.html
+++ b/templates/sas_home.html
@@ -68,7 +68,9 @@
         <p>
           The number of free meal swipes/dining dollars you'll have access to this week.
         </p>
-        <button class="btn btn-outline-secondary" type="button">View Balance</button>
+        <a href="/sas_balance">
+          <button class="btn btn-outline-secondary" type="button">View Balance</button>
+        </a>
       </div>
     </div>
     <div class="col-md-6">
