front end- added student transfer/balance/login; admin login/dashboard/student requests/student management

--- a/templates/admin_login.html
+++ b/templates/admin_login.html
@@ -40,10 +40,10 @@
                   <input type="checkbox" value="remember-me"> Remember me
                 </label>
               </div>
-              <a href="/sas_home">
+              <a href="/admin_home">
                 <!-- note: doesnt actually utilize log in form yet -->
                 <!-- <button class="w-100 btn btn-lg btn-primary" type="submit" value='login' name='login'>Log in</button> -->
-                <a href="/sas_home" class="w-100 btn btn-lg btn-primary" role="button">Log In</a>
+                <a href="/admin_home" class="w-100 btn btn-lg btn-primary" role="button">Log In</a>
               </a>
             </form>
           </div>
