--- a/templates/admin_requests.html
+++ b/templates/admin_requests.html
@@ -107,13 +107,27 @@
       </div>
     </nav>
 
+
+
+
+
+
+
+
+
+
+
+
     <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
+
+
       <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-        <h1 class="h2">Program Overview Dashboard</h1>
+        <h1 class="h2">Manage Students</h1>
         <div class="btn-toolbar mb-2 mb-md-0">
           <div class="btn-group me-2">
-            <button type="button" class="btn btn-sm btn-outline-secondary">Share</button>
-            <button type="button" class="btn btn-sm btn-outline-secondary">Export</button>
+            <!-- fill in with jinja count of number of requests-->
+            <!-- <button type="button" class="btn btn-sm btn-outline-secondary">Pending Requests (19)</button> -->
+            <a type="button" class="btn btn-sm btn-outline-secondary" href='/admin_students'>View Enrolled Students</a>
           </div>
 
           <!-- <button type="button" class="btn btn-sm btn-outline-secondary dropdown-toggle">
@@ -123,95 +137,99 @@
         </div>
       </div>
 
-      <canvas class="my-4 w-100" id="myChart" width="900" height="380"></canvas>
 
-      <h2>Program History Statistics</h2>
+
+
+      <!-- <div class="dropdown">
+        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Dropdown button
+        </button>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+          <a class="dropdown-item" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+            Action
+          </a>
+          <a class="dropdown-item" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+            Action
+          </a>
+          <a class="dropdown-item" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+            Action
+          </a>
+        </div>
+      </div> -->
+
+
+
       <!-- fill in with template database data -->
       <div class="table-responsive">
         <table class="table table-striped table-sm">
           <thead>
             <tr>
+              <th scope="col">NetID</th>
               <th scope="col">Semester</th>
-              <th scope="col">Students Applied</th>
-              <th scope="col">Students Enrolled</th>
-              <th scope="col">Meal Swipes Donated</th>
-              <th scope="col">Meal Swipes Redeemed</th>
-              <th scope="col">Dining Dollars Donated</th>
-              <th scope="col">Dining Dollars Redeemed</th>
+              <th scope="col">Status</th>
+              <th scope="col"></th>
+              <th scope="col"></th>
             </tr>
           </thead>
-
-          <!-- 'Fall 2022',
-          'Spring 2023',
-          'Fall 2023',
-          'Spring 2024',
-          'Fall 2024',
-          'Spring 2025',
-          'Fall 2025' -->
           <tbody>
+
             <tr>
-              <td>Fall 2025</td>
-              <td>1,034</td>
-              <td>509</td>
-              <td>17,000</td>
-              <td>9,771</td>
-              <td>$26,000.82</td>
-              <td>$13,000.09</td>
-            </tr>
-            <tr>
-              <td>Spring 2025</td>
-              <td>4,876</td>
-              <td>3,133</td>
-              <td>21,072</td>
-              <td>15,725</td>
-              <td>$47,267.11</td>
-              <td>$37,385.00</td>
-            </tr>
-            <tr>
-              <td>Fall 2024</td>
-              <td>10,099</td>
-              <td>8,333</td>
-              <td>29,107</td>
-              <td>20,884</td>
-              <td>$15,620.04</td>
-              <td>$14,648.09</td>
-            </tr>
-            <tr>
-              <td>Spring 2024</td>
-              <td>11,114</td>
-              <td>9,008</td>
-              <td>39,996</td>
-              <td>23,768</td>
-              <td>$74,139.00</td>
-              <td>$59,975.78</td>
-            </tr>
-            <tr>
-              <td>Fall 2023</td>
-              <td>13,217</td>
-              <td>8,085</td>
-              <td>41,276</td>
-              <td>30,300</td>
-              <td>$63,449.99</td>
-              <td>$47,007.45</td>
-            </tr>
-            <tr>
-              <td>Spring 2023</td>
-              <td>19,099</td>
-              <td>8,333</td>
-              <td>29,107</td>
-              <td>20,884</td>
-              <td>$15,620.04</td>
-              <td>$14,648.09</td>
-            </tr>
-            <tr>
+              <td>bbb222</td>
               <td>Fall 2022</td>
-              <td>11,012</td>
-              <td>9,008</td>
-              <td>39,996</td>
-              <td>23,768</td>
-              <td>$74,139.00</td>
-              <td>$59,975.78</td>
+              <td>Pending</td>
+              <td>
+                <a type="button" class="btn btn-success" href='/admin_accept'>Accept</a>
+                <a type="button" class="btn btn-danger">Deny</a>
+              </td>
             </tr>
+            <tr>
+              <td>bbb222</td>
+              <td>Fall 2022</td>
+              <td>Pending</td>
+              <td>
+                <a type="button" class="btn btn-success" href='/admin_accept'>Accept</a>
+                <a type="button" class="btn btn-danger">Deny</a>
+              </td>
+            </tr>
+            <tr>
+              <td>bbb222</td>
+              <td>Fall 2022</td>
+              <td>Pending</td>
+              <td>
+                <a type="button" class="btn btn-success" href='/admin_accept'>Accept</a>
+                <a type="button" class="btn btn-danger">Deny</a>
+              </td>
+            </tr>
+            <tr>
+              <td>bbb222</td>
+              <td>Fall 2022</td>
+              <td>Pending</td>
+              <td>
+                <a type="button" class="btn btn-success" href='/admin_accept'>Accept</a>
+                <a type="button" class="btn btn-danger">Deny</a>
+              </td>
+            </tr>
+            <tr>
+              <td>bbb222</td>
+              <td>Fall 2022</td>
+              <td>Pending</td>
+              <td>
+                <a type="button" class="btn btn-success" href='/admin_accept'>Accept</a>
+                <a type="button" class="btn btn-danger">Deny</a>
+              </td>
+            </tr>
+            <tr>
+              <td>bbb222</td>
+              <td>Fall 2022</td>
+              <td>Pending</td>
+              <td>
+                <a type="button" class="btn btn-success" href='/admin_accept'>Accept</a>
+                <a type="button" class="btn btn-danger">Deny</a>
+              </td>
+            </tr>
+
+
+
 
           </tbody>
         </table>
