--- a/templates/base.html
+++ b/templates/base.html
@@ -10,9 +10,10 @@
     <title>NYU Eats {% block title %} {% endblock %}</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="../static/css/bootstrap.min.css" rel="stylesheet">
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous"> -->
+    <!-- <link href="../static/css/bootstrap.min.css" rel="stylesheet"> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 
+    <!--
     <style>
       .bd-placeholder-img {
         font-size: 1.125rem;
@@ -69,8 +70,10 @@
       <!-- Additional Page Styles-->
       {% endblock %}
     </style>
+      -->
 
     <!-- Custom styles for this template -->
+    <link href="../static/css/starter-template.css" rel="stylesheet">
     <link href="../static/css/blog.css" rel="stylesheet">
     {% block stylesheets %}{% endblock %}
     <!-- Fonts and Icons -->
