--- a/templates/sas_home.html
+++ b/templates/sas_home.html
@@ -5,86 +5,66 @@
 {% endblock %}
 
 {% block style %}
-.bd-placeholder-img {
-  font-size: 1.125rem;
-  text-anchor: middle;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  user-select: none;
-}
 
-@media (min-width: 768px) {
-  .bd-placeholder-img-lg {
-    font-size: 3.5rem;
-  }
-}
-
-.b-example-divider {
-  height: 3rem;
-  background-color: rgba(0, 0, 0, .1);
-  border: solid rgba(0, 0, 0, .15);
-  border-width: 1px 0;
-  box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
-}
-
-.b-example-vr {
-  flex-shrink: 0;
-  width: 1.5rem;
-  height: 100vh;
-}
-
-.bi {
-  vertical-align: -.125em;
-  fill: currentColor;
-}
-
-.nav-scroller {
-  position: relative;
-  z-index: 2;
-  height: 2.75rem;
-  overflow-y: hidden;
-}
-
-.nav-scroller .nav {
-  display: flex;
-  flex-wrap: nowrap;
-  padding-bottom: 1rem;
-  margin-top: -1px;
-  overflow-x: auto;
-  text-align: center;
-  white-space: nowrap;
-  -webkit-overflow-scrolling: touch;
-}
 {% endblock %}
 
 {% block content %}
 
-<div class="container py-4">
-
-  <div class="row align-items-md-stretch">
-    <div class="col-md-6">
-      <div class="h-100 p-5 bg-light border rounded-3">
-        <h2>View Weekly Allowance Balance</h2>
-        <p>
-          The number of free meal swipes/dining dollars you'll have access to this week.
-        </p>
-        <a href="/sas_balance">
-          <button class="btn btn-outline-secondary" type="button">View Balance</button>
-        </a>
-      </div>
-    </div>
-    <div class="col-md-6">
-      <div class="h-100 p-5 bg-light border rounded-3">
-        <h2>Claim swipes</h2>
-        <p>Transfer claimed meal swipes/dining dollars to your ID card</p>
-        <button class="btn btn-outline-secondary" type="button">Claim</button>
-      </div>
+<div class="container">
+  <div class="p-4 p-md-5 mb-4 rounded text-bg-dark">
+    <div class="col-md-6 px-0">
+      <h1 class="display-4 fst-italic">Welcome back to Share A Swipe!</h1>
     </div>
   </div>
 
-  <footer class="pt-3 mt-4 text-muted border-top">
-    &copy; 2022
-  </footer>
+  <!-- <div class="starter-template"> -->
+    <div class="row align-items-md-stretch justify-content-start">
+      <div class="col-md-6">
+        <div class="h-100 p-5 bg-light border rounded-3">
+          <!-- use {{semester}} to fill in semester-->
+          <h2>Your Remaining Allowance Balance - Fall 2022</h2>
+          <!-- <br> -->
+          <p>This is the total number of donated meal swipes and
+            dining dollars that you have for the remainder of the semester.
+          </p>
+          <br>
+          <div style='text-align: center'>
+            <div class="table-responsive">
+              <table class="table table-bordered table-striped">
+                <thead>
+                  <tr>
+                    <th scope="col">Meal Swipes</th>
+                    <th scope="col">Dining Dollars</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <!-- use {{meal_swipes}} and {{dining_dollars}} to fill in table-->
+                    <td>20</td>
+                    <td>$36.75</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
+
+        </div>
+      </div>
+      <div class="col-md-6 align-middle">
+        <div class="h-100 p-5 bg-light border rounded-3">
+          <h2>Claim Allowance</h2>
+          <p>Claim your donated meal swipes and dining dollar by
+            transfering them to your NYU ID card.
+          </p>
+          <br>
+          <!-- <button class="btn btn-outline-secondary btn-lg" type="button">Claim</button> -->
+          <a href="/sas_claim" class="btn btn-outline-secondary btn-lg" role="button">Claim</a>
+
+        </div>
+      </div>
+    </div>
+
+  </div>
 </div>
 
 
