--- a/meal/requestmeal/templates/requestmeal/login.html
+++ b/meal/requestmeal/templates/requestmeal/login.html
@@ -27,7 +27,7 @@
             <form method="POST">
                 {% csrf_token %}
                 <fieldset class="form-group">
-                    <legend class="border-bottom mb-4">Log In</legend>
+                    <legend class="border-bottom mb-4">Log In to Share A Swipe</legend>
                     {{ form|crispy }}
                 </fieldset>
                 <div class="form-group">
