--- a/meal/requestmeal/templates/requestmeal/adminaccept.html
+++ b/meal/requestmeal/templates/requestmeal/adminaccept.html
@@ -1,5 +1,5 @@
 {% extends "requestmeal/base.html" %}
-
+{% load crispy_forms_tags %}
 {% block title %}
 || Welcome
 {% endblock %}
@@ -32,17 +32,17 @@
       <div class="position-sticky pt-3 sidebar-sticky">
         <ul class="nav flex-column">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/admin_home">
+            <a class="nav-link active" aria-current="page" href="{% url 'meal-adminpage'%}">
               <span data-feather="home" class="align-text-bottom"></span>
               Dashboard
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/admin_requests">
+            <a class="nav-link" href="{% url 'meal-requestlist'%}">
               <span data-feather="file" class="align-text-bottom"></span>
               <!-- fill in with jinja count of number of requests-->
               Requests
-              <span class="badge bg-danger rounded-pill">6</span>
+              <span class="badge bg-danger rounded-pill">{{ num }}</span>
 
             </a>
           </li>
@@ -53,7 +53,7 @@
             </a>
           </li> -->
           <li class="nav-item">
-            <a class="nav-link" href="/admin_students">
+            <a class="nav-link" href="{% url 'meal-studentlist'%}">
               <span data-feather="users" class="align-text-bottom"></span>
               Students
             </a>
@@ -202,47 +202,14 @@
               </div>
 
               <div class="col-md-7 col-lg-8">
-                <h4 class="mb-3">Student Information</h4>
-                <form class="needs-validation" novalidate>
+                <h4 class="mb-3">Donation Information</h4>
+                <form class="needs-validation" novalidate method = "POST">
                   <div class="row g-3">
                     <div class="col-sm-6">
-                      <label for="firstName" class="form-label">First name</label>
-                      <input type="text" class="form-control" id="firstName" placeholder="" value="" required>
-                      <div class="invalid-feedback">
-                        Valid first name is required.
-                      </div>
-                    </div>
-
-                    <div class="col-sm-6">
-                      <label for="lastName" class="form-label">Last name</label>
-                      <input type="text" class="form-control" id="lastName" placeholder="" value="" required>
-                      <div class="invalid-feedback">
-                        Valid last name is required.
-                      </div>
-                    </div>
-
-                    <div class="col-12">
-                      <label for="username" class="form-label">Username</label>
-                      <div class="input-group has-validation">
-                        <span class="input-group-text">@</span>
-                        <input type="text" class="form-control" id="username" placeholder="Username" required>
-                      <div class="invalid-feedback">
-                          Your username is required.
-                        </div>
-                      </div>
-                    </div>
-
-                    <div class="col-12">
-                      <label for="email" class="form-label">Email <span class="text-muted">(Optional)</span></label>
-                      <input type="email" class="form-control" id="email" placeholder="you@example.com">
-                      <div class="invalid-feedback">
-                        Please enter a valid email address for shipping updates.
-                      </div>
-                    </div>
-
-
-
-                  <button class="w-100 btn btn-primary btn-lg" type="submit">Continue to checkout</button>
+                      {% csrf_token %}
+                      {{ a_form|crispy }}
+                      
+                  <button class="w-100 btn btn-primary btn-lg" type="submit">Donate</button>
                 </form>
               </div>
             </div>
