--- a/meal/requestmeal/templates/requestmeal/register.html
+++ b/meal/requestmeal/templates/requestmeal/register.html
@@ -76,7 +76,7 @@
     </p>
     <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
       <button type="button" class="btn btn-primary btn-lg px-4 gap-3" href="{% url 'login'%}">Become a Member</button>
-      <button class="btn btn-sm btn-outline-secondary" href="{% url 'login'%}" type="submit">Become a member!</button>
+      <a class="btn btn-primary btn-lg px-4 gap-3" href="{% url 'login'%}" type="button">Become a member!</a>
     </form>
     </div>
   </div>
