--- a/meal/requestmeal/templates/requestmeal/test.html
+++ b/meal/requestmeal/templates/requestmeal/test.html
@@ -262,3 +262,30 @@
     <script src="../static/js/dashboard.js"></script>
 
 {% endblock %}
+
+
+
+<label for="firstName" class="form-label">Meal Swipes</label>
+                      <input type="text" class="form-control" id="firstName" placeholder="" value="" required>
+                      <div class="invalid-feedback">
+                        Valid first name is required.
+                      </div>
+                    </div>
+
+                    <div class="col-sm-6">
+                      <label for="lastName" class="form-label">Dining Dollars</label>
+                      <input type="text" class="form-control" id="lastName" placeholder="" value="" required>
+                      <div class="invalid-feedback">
+                        Valid last name is required.
+                      </div>
+                    </div>
+
+                    <div class="col-12">
+                      <label for="username" class="form-label">Net ID</label>
+                      <div class="input-group has-validation">
+                        <input type="text" class="form-control" id="username" placeholder="Net ID" required>
+                      <div class="invalid-feedback">
+                          Your username is required.
+                        </div>
+                      </div>
+                    </div>
