login, signup, and footer fixed

--- a/meal/requestmeal/templates/requestmeal/about.html
+++ b/meal/requestmeal/templates/requestmeal/about.html
@@ -97,6 +97,8 @@ Right. You're right.
         </p>
         <div class="d-grid gap-2 d-md-flex justify-content-md-end">
           <a href="{% url 'login'%}" class="btn btn-primary me-md-2" role="button">Log In</a>
+          <a href="{% url 'meal-register'%}" class="btn btn-primary me-md-2" role="button">Sign Up</a>
+          <!-- <a class="btn btn-sm btn-outline-secondary" href="{% url 'meal-register'%}">Sign up</a> -->
         </div>
       </div>
 
