--- a/meal/requestmeal/templates/requestmeal/base.html
+++ b/meal/requestmeal/templates/requestmeal/base.html
@@ -66,7 +66,7 @@
         -webkit-overflow-scrolling: touch;
       }
 
-      
+
     </style>
 
     <!-- Custom styles for this template -->
@@ -85,7 +85,9 @@
       <header class="blog-header lh-1 py-3">
         <div class="row flex-nowrap justify-content-between align-items-center">
           <div class="col-4 pt-1">
+            <!--
             <a class="link-secondary" href="#">Subscribe</a>
+          -->
           </div>
           <div class="col-4 text-center">
             <a class="blog-header-logo" href="/">
@@ -95,10 +97,12 @@
           </div>
 
           <div class="col-4 d-flex justify-content-end align-items-center">
+            <!--
             <a class="link-secondary" href="#" aria-label="Search">
               <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="mx-3" role="img" viewBox="0 0 24 24"><title>Search</title><circle cx="10.5" cy="10.5" r="7.5"/><path d="M21 21l-5.2-5.2"/></svg>
             </a>
             <a class="btn btn-sm btn-outline-secondary" href="{% url 'meal-register'%}">Sign up</a>
+          -->
           </div>
         </div>
       </header>
@@ -217,7 +221,7 @@
     <br><br>
     <footer class="mastfoot">
       <div class="inner">
-        <p><small>Powered by <a href="https://github.com/taywong00/design-project">B24</a>.</small></p>
+        <p style='text-align:center'><small>Powered by <a href="https://github.com/taywong00/design-project">B24</a>.</small></p>
       </div>
     </footer>
 
