--- a/meal/requestmeal/templates/requestmeal/register.html
+++ b/meal/requestmeal/templates/requestmeal/register.html
@@ -61,26 +61,55 @@
 
 {% block content %}
 
-<form method="POST">
-  {% csrf_token %}
 
-<div class="px-4 py-5 my-5 text-center">
-  <!-- <img class="d-block mx-auto mb-4" src="../assets/brand/bootstrap-logo.svg" alt="" width="72" height="57"> -->
-  <h1 class="display-5 fw-bold">Become a Member</h1>
-  {{ form|crispy }}
-  <div class="col-lg-6 mx-auto">
-    <p class="lead mb-4">
-      Submit a request to enroll in the Share A Swipe! Program.
-      Your student profile will be submitted for review. If you are accepted, you will recieve
-      an email with next steps. You can always check your enrollment status <a href="/sas_status">here</a>.
-    </p>
-    <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-      <button type="button" class="btn btn-primary btn-lg px-4 gap-3" href="{% url 'login'%}">Become a Member</button>
-      <a class="btn btn-primary btn-lg px-4 gap-3" href="{% url 'login'%}" type="button">Become a member!</a>
-    </form>
-    </div>
-  </div>
+<div class="container">
+    <!-- <div class="starter-template"> -->
+
+      <div class="row justify-content-center">
+        <br><br>
+        <div class="row"></div>
+        <div class="row">
+          <div class="col-3"></div>
+          <div class="col-6">
+
+
+            <form method="POST">
+              {% csrf_token %}
+
+              <!-- <div class="px-4 py-5 my-5 text-center"> -->
+                <!-- <img class="d-block mx-auto mb-4" src="../assets/brand/bootstrap-logo.svg" alt="" width="72" height="57"> -->
+                <legend class="border-bottom mb-4">Become a Share a Swipe Member</legend>
+                {{ form|crispy }}
+                <!-- <div class="col-lg-6 mx-auto"> -->
+                  <!-- <p class="lead mb-4">
+                    Submit a request to enroll in the Share A Swipe! Program.
+                    Your student profile will be submitted for review. If you are accepted, you will recieve
+                    an email with next steps. You can always check your enrollment status <a href="/sas_status">here</a>.
+                  </p> -->
+                  <!-- <div class="d-grid gap-2 d-sm-flex justify-content-sm-center"> -->
+                    <!-- <button type="button" class="btn btn-primary btn-lg px-4 gap-3" href="{% url 'login'%}">Become a Member</button> -->
+                    <br>
+                    <a style='position: absolute; right=0px;' class="btn btn-primary me-md-2" href="{% url 'login'%}" type="button">Become a member!</a>
+                  <!-- </div> -->
+                <!-- </div> -->
+              <!-- </div> -->
+            </form>
+
+
+            <br><br>
+            <small> Dont have an account yet? <a href="{% url 'meal-register'%}">Sign up here.</a></small>
+
+          </div>
+          <div class="col-3"></div>
+        </div>
+        <div class="row"></div>
+      </div>
+
+    <!-- </div> -->
 </div>
+
+
+
 
 
 
