--- a/meal/requestmeal/templates/requestmeal/login.html
+++ b/meal/requestmeal/templates/requestmeal/login.html
@@ -15,6 +15,16 @@
 
 {% block content %}
 
+<div class="p-4 p-md-5 mb-4 text-bg-dark" style='border-bottom-right-radius:5px; border-bottom-left-radius:5px;'>
+  <div class="container">
+  <div class="col-md-6 px-0">
+    <h1 class="display-4 fst-italic">Log In to Share a Swipe</h1>
+    <p class="lead my-3">[Caption about the program, and we'll spend the rest of this page with program info.]</p>
+  </div>
+  </div>
+</div>
+
+
 <div class="container">
     <!-- <div class="starter-template"> -->
 
@@ -23,7 +33,7 @@
         <div class="row"></div>
         <div class="row">
           <div class="col-4"></div>
-          <div class="col-4">
+          <div class="col-4 h-100 p-5 bg-light border rounded-3">
             <form method="POST">
                 {% csrf_token %}
                 <fieldset class="form-group">
