--- a/meal/requestmeal/templates/requestmeal/adminpage.html
+++ b/meal/requestmeal/templates/requestmeal/adminpage.html
@@ -14,17 +14,17 @@
 
 {% block content %}
 
-<div class="container-fluid">
-
-  <div class="p-4 p-md-5 mb-4 rounded text-bg-dark">
-    <div class="col-md-6 px-0">
-      <h1 class="display-4 fst-italic">Share a Swipe! Manager</h1>
-      <p class="lead my-3">
-        Manage student program enrollment, assign donation allowances, and view
-        data analyses and program statistics.
-      </p>
-    </div>
+<div class="p-4 p-md-5 mb-4 text-bg-dark" style='border-bottom-right-radius:5px; border-bottom-left-radius:5px;'>
+  <div class="col-md-6 px-0">
+    <h1 class="display-4 fst-italic">Share a Swipe! Manager</h1>
+    <p class="lead my-3">
+      Manage student program enrollment, assign donation allowances, and view
+      data analyses and program statistics.
+    </p>
   </div>
+</div>
+
+<div class="container-fluid">
 
 
   <div class="row">
@@ -58,12 +58,12 @@
               Students
             </a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link" href="#">
               <span data-feather="bar-chart-2" class="align-text-bottom"></span>
               Reports
             </a>
-          </li>
+          </li> -->
           <!-- <li class="nav-item">
             <a class="nav-link" href="#">
               <span data-feather="layers" class="align-text-bottom"></span>
@@ -74,33 +74,21 @@
 
         <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
           <span>Saved reports</span>
-          <a class="link-secondary" href="#" aria-label="Add a new report">
+          <!-- <a class="link-secondary" href="#" aria-label="Add a new report">
             <span data-feather="plus-circle" class="align-text-bottom"></span>
-          </a>
+          </a> -->
         </h6>
         <ul class="nav flex-column mb-2">
           <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" download href="../reports/current_semester_bank.csv">
               <span data-feather="file-text" class="align-text-bottom"></span>
-              Current month
+              Current semester bank
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" download href="../reports/semester_donation.csv">
               <span data-feather="file-text" class="align-text-bottom"></span>
-              Last quarter
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <span data-feather="file-text" class="align-text-bottom"></span>
-              Social engagement
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <span data-feather="file-text" class="align-text-bottom"></span>
-              Year-end sale
+              Semesterly donation histrory
             </a>
           </li>
         </ul>
@@ -111,10 +99,10 @@
       <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
         <h1 class="h2">Program Overview Dashboard</h1>
         <div class="btn-toolbar mb-2 mb-md-0">
-          <div class="btn-group me-2">
+          <!-- <div class="btn-group me-2">
             <button type="button" class="btn btn-sm btn-outline-secondary">Share</button>
             <button type="button" class="btn btn-sm btn-outline-secondary">Export</button>
-          </div>
+          </div> -->
 
           <!-- <button type="button" class="btn btn-sm btn-outline-secondary dropdown-toggle">
             <span data-feather="calendar" class="align-text-bottom"></span>
