--- a/meal/requestmeal/templates/requestmeal/studentlist.html
+++ b/meal/requestmeal/templates/requestmeal/studentlist.html
@@ -14,18 +14,17 @@
 
 {% block content %}
 
-<div class="container-fluid">
-
-  <div class="p-4 p-md-5 mb-4 rounded text-bg-dark">
-    <div class="col-md-6 px-0">
-      <h1 class="display-4 fst-italic">Share a Swipe! Manager</h1>
-      <p class="lead my-3">
-        Manage student program enrollment, assign donation allowances, and view
-        data analyses and program statistics.
-      </p>
-    </div>
+<div class="p-4 p-md-5 mb-4 text-bg-dark" style='border-bottom-right-radius:5px; border-bottom-left-radius:5px;'>
+  <div class="col-md-6 px-0">
+    <h1 class="display-4 fst-italic">Share a Swipe! Manager</h1>
+    <p class="lead my-3">
+      Manage student program enrollment, assign donation allowances, and view
+      data analyses and program statistics.
+    </p>
   </div>
+</div>
 
+<div class="container-fluid">
 
   <div class="row">
     <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
