real info in about page, captioning, and  formatting

--- a/meal/requestmeal/templates/requestmeal/about.html
+++ b/meal/requestmeal/templates/requestmeal/about.html
@@ -13,7 +13,9 @@
   <div class="container">
   <div class="col-md-6 px-0">
     <h1 class="display-4 fst-italic">Share A Swipe!</h1>
-    <p class="lead my-3">[Caption about the program, and we'll spend the rest of this page with program info.]</p>
+    <p class="lead my-3">
+      Providing students in need a streamlined, convinient, and reliable way to access free meals.
+    </p>
   </div>
   </div>
 </div>
@@ -30,63 +32,47 @@
     <article class="blog-post">
       <h2 class="blog-post-title mb-1">Share A Swipe!</h2>
       <p>
-        According to all known laws of aviation, there is no way a bee should be able to fly. Its wings are too small to get its fat little body off the ground. The bee, of course, flies anyway because bees don't care what humans think is impossible. Yellow, black. Yellow, black. Yellow, black. Yellow, black. Ooh, black and yellow! Let's shake it up a little. Barry! Breakfast is ready!
+        Food insecurity has historically been a prevalent and ever-increasingly problem among college students in the United States. According to a 2019 study, 45% of students surveyed from over 100 institutions reported that they had been food insecure in the past 30 days. Students at NYU are no exception– in 2018, over one fifth of the student body reported financial hardship affording food.
         <br><br>
-        Coming! Hang on a second. Hello? Barry? Adam? Can you believe this is happening? I can't. I'll pick you up. Looking sharp. Use the stairs, Your father paid good money for those. Sorry. I'm excited. Here's the graduate. We're very proud of you, son. A perfect report card, all B's. Very proud. Ma! I got a thing going here. You got lint on your fuzz. Ow! That's me! Wave to us! We'll be in row 118,000. Bye! Barry, I told you, stop flying in the house! Hey, Adam. Hey, Barry. Is that fuzz gel?
+        The COVID-19 pandemic has only exacerbated the matter of food insecurity among college students. In fall 2020, roughly a year into the pandemic, 52% of students occasionally used off-campus food banks, while 30% used them on a monthly or higher basis.
+        <br><br>
+        Despite the increasing need given the hardships endured during a pandemic, NYU has struggled to provide adequate food assistance for its students. Previously existing programs have been temporarily suspended due to the pandemic, while those that remain cannot effectively meet the increased demand., Most famously, in 2020, NYU failed to handle meal delivery to over 2,600 returning students in quarantine, leaving many students with improper meals or without food at all.
+        <br><br>
+        The <i>Share a Swipe</i> Program aims to be a software-based solution that resolves the crisis of food insecurity at NYU by providing students their own streamlined, easy, and reliable access to free meals.
+
       </p>
+
       <br><hr>
     </article>
     <article class="blog-post">
       <h2 class="blog-post-title mb-1">How it Works</h2>
       <p>
-        A little. Special day, graduation. Never thought I'd make it. Three days grade school, three days high school. Those were awkward. Three days college. I'm glad I took a day and hitchhiked around The Hive. You did come back different. Hi, Barry. Artie, growing a mustache? Looks good. Hear about Frankie? Yeah. You going to the funeral? No, I'm not going. Everybody knows, sting someone, you die. Don't waste it on a squirrel. Such a hothead.
+        Our team wanted to create a platform that automatically distributes unused NYU meal swipes and dining dollars to students who need them.
+        Specifically, the application will keep track of the quantity of purchased meal swipes and dining dollars for the semester.
+        By the end of the semester, if there are less swipes and dining dollars used than purchased, the application will collect and distribute them for donation.
         <br><br>
-        I guess he could have just gotten out of the way.
-        I love this incorporating an amusement park into our day.
-        That's why we don't need vacations.
-        Boy, quite a bit of pomp under the circumstances.
-        Well, Adam, today we are men.
-        We are!
-        Bee-men.
-        Amen!
+        Currently the system requires spending time and resources advertising it, students to take the time manually calculating how many swipes are needed to complete the semester, and manual entry of donations using NYU Eats.
+        Automatic donor enrollment ensures the maximum number of swipes are donated and nothing gets wasted.
+        Students in need will be able to create donee accounts through their existing NYU Eats profiles. Integration with the NYU Eats platform streamlines donee access, ensures system security, and provides all necessary dining information.
+
+
       </p>
       <br><hr>
     </article>
     <article class="blog-post">
       <h2 class="blog-post-title mb-1">Eligibility</h2>
       <p>
-        Hallelujah!
-        Students, faculty, distinguished bees,
-        please welcome Dean Buzzwell.
-        Welcome, New Hive City graduating class of 9:15.
-        That concludes our ceremonies And begins your career at Honex Industries!
-        Will we pick our job today?
-        I heard it's just orientation.
-        Heads up! Here we go.
-        Keep your hands and antennas inside the tram at all times.
-        Wonder what it'll be like?
-        A little scary.
+        All NYU students, undergraduate and graduate, are encouraged to register for an account and apply to become members of the program.
+        Due to our compliance with FERPA regulations, student qualification for donated meal swipes is determined on a case by case basis by
+        the NYU financial aid team.
+
+        <br><br>
+        If you have any inquiries about your elibility, you can email them at <a href="mailto:financial.aid@nyu.edu"> financial.aid@nyu.edu</a>,
+        or reach out to the Division of Student Affairs at <a href='mailto:student.affairs@nyu.edu'>student.affairs@nyu.edu</a>.
       </p>
       <br><hr>
     </article>
-    <article class="blog-post">
-      <h2 class="blog-post-title mb-1">How to Become a Member</h2>
-      <p>
-        Welcome to Honex, a division of Honesco and a part of the Hexagon Group.
-This is it!
-Wow.
-Wow.
-We know that you, as a bee, have worked your whole life to get to the point where you can work for your whole life.
-Honey begins when our valiant Pollen Jocks bring the nectar to The Hive.
-Our top-secret formula is automatically color-corrected, scent-adjusted and bubble-contoured into this soothing sweet syrup with its distinctive golden glow you know as... Honey!
-That girl was hot.
-She's my cousin!
-She is?
-Yes, we're all cousins.
-Right. You're right.
-</p>
-      <br><hr>
-    </article>
+
 
 
 
@@ -114,17 +100,17 @@ Right. You're right.
         <ol class="list-unstyled">
           <!-- <br> -->
           <li class='p-2'>
-            <a style='font-weight: bold;' href="https://www.nyu.edu/students/student-information-and-resources/courtesy-meals.html">NYU Courtesy Meals</a>
+            <a target="_blank" style='font-weight: bold;' href="https://www.nyu.edu/students/student-information-and-resources/courtesy-meals.html">NYU Courtesy Meals</a>
             <br> An NYU-based Emergency Food Assistance program.
           </li>
 
           <li class='p-2'>
-            <a style='font-weight: bold;' href="https://www.collegestudentpantry.org/">College Student Pantry</a>
+            <a target="_blank" style='font-weight: bold;' href="https://www.collegestudentpantry.org/">College Student Pantry</a>
             <br> Any NYC college student, graduate or undergraduate, is eligible to use this food pantry.
           </li>
 
           <li class='p-2'>
-            <a style='font-weight: bold;' href="https://www.fns.usda.gov/snap/students">SNAP Benefits</a>
+            <a target="_blank" style='font-weight: bold;' href="https://www.fns.usda.gov/snap/students">SNAP Benefits</a>
             <br> The Supplemental Nutrition Assistance Program (SNAP) is a federally funded nutrition assistance program.
           </li>
         </ol>
@@ -138,7 +124,7 @@ Right. You're right.
             <div class="mb-1 text-muted">
             Meet the team and learn more about how our solution aims to solve food indescurity at NYU. </div>
 
-            <a href="https://www.canva.com/design/DAE_z6h9Eps/QvSrsOk7RHwBm5LIjXMU-A/view?utm_content=DAE_z6h9Eps&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink" class="stretched-link">Go to whitepapers. ></a>
+            <a target="_blank" href="https://www.canva.com/design/DAE_z6h9Eps/QvSrsOk7RHwBm5LIjXMU-A/view?utm_content=DAE_z6h9Eps&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink" class="stretched-link">Go to whitepapers. ></a>
           </div>
           <div class="col-auto d-none d-lg-block">
 
