--- a/meal/requestmeal/templates/requestmeal/login.html
+++ b/meal/requestmeal/templates/requestmeal/login.html
@@ -19,7 +19,9 @@
   <div class="container">
   <div class="col-md-6 px-0">
     <h1 class="display-4 fst-italic">Log In to Share a Swipe</h1>
-    <p class="lead my-3">[Caption about the program, and we'll spend the rest of this page with program info.]</p>
+    <p class="lead my-3">
+      Providing students in need a streamlined, convinient, and reliable way to access free meals.
+    </p>
   </div>
   </div>
 </div>
