--- a/meal/requestmeal/templates/requestmeal/menu.html
+++ b/meal/requestmeal/templates/requestmeal/menu.html
@@ -11,19 +11,16 @@
 {% block content %}
 
 
+<!-- THIS IS WHAT SHOULD BE LOADED IF YOU HAVE ACCESS (ACCESS LEVEL 2) -->
+
 <div class="p-4 p-md-5 mb-4 text-bg-dark" style='border-bottom-right-radius:5px; border-bottom-left-radius:5px;'>
   <div class="container">
   <div class="col-md-6 px-0">
     <h1 class="display-4 fst-italic">Welcome back to Share A Swipe!</h1>
-    <p class="lead my-3">[Caption about the program, and we'll spend the rest of this page with program info.]</p>
+    <p class="lead my-3">View your remaining account balance or transfer awarded meal swipes to your NYU ID card.</p>
   </div>
   </div>
 </div>
-
-
-
-
-<!-- THIS IS WHAT SHOULD BE LOADED IF YOU HAVE ACCESS (ACCESS LEVEL 2) -->
 
 <div class="container">
 
@@ -83,6 +80,18 @@
 
 
 <!-- THIS IS WHAT SHOULD BE LOADED IF YOU DO NOT HAVE ACCESS (ACCESS LEVEL 0,1) -->
+
+<div class="p-4 p-md-5 mb-4 text-bg-dark" style='border-bottom-right-radius:5px; border-bottom-left-radius:5px;'>
+  <div class="container">
+  <div class="col-md-6 px-0">
+    <h1 class="display-4 fst-italic">Welcome back to Share A Swipe!</h1>
+    <p class="lead my-3">
+      Providing students in need a streamlined, convinient, and reliable way to access free meals.
+    </p>
+  </div>
+  </div>
+</div>
+
 
 <div class="container">
 
